Update Feed and Post
Delete a field likes in a post,
Implement a pinPost, unpinPost and TogglePost.